# auto_cronometer

./: .gitignore  README.md  auto_cronometer.py  cloudify.py  create_grocery_list.py  grocery_list.py  main.py  pyproject.toml  scrape.py  update_diary.py
auto_cronometer/: active_yaml.py  auto_cm.py  cloudify.py  grocery_list.py  main.py  parse.py  scrape.py  update_diary.py
